force-app/main/default/objects/Client_Meeting__c/Client_Meeting__c.object-meta.xml
<CustomObject>
    <label>Partner Meeting</label>
    <nameField>
        <label>Client Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>