force-app/main/default/objects/Client_Meeting__c/fields/A_R_Notes__c.field-meta.xml
<CustomField>
    <fullName>A_R_Notes__c</fullName>
    <label>A/R Notes</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>