force-app/main/default/objects/Client_Meeting__c/fields/A_R_Review__c.field-meta.xml
<CustomField>
    <fullName>A_R_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>1	Mention upcoming money due and the importance of avoiding interruption in services.	
2	Review our process (AMG) and harvest information on Client&apos;s process</inlineHelpText>
    <label>A/R Review</label>
    <type>Checkbox</type>
</CustomField>