force-app/main/default/objects/Client_Meeting__c/fields/About_Abstrakt__c.field-meta.xml
<CustomField>
    <fullName>About_Abstrakt__c</fullName>
    <label>About Abstrakt</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>