force-app/main/default/objects/Client_Meeting__c/fields/Abstrakt_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Abstrakt_Action_Items__c</fullName>
    <label>Abstrakt Action Items</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>