force-app/main/default/objects/Client_Meeting__c/fields/Abstrakt_Announcements__c.field-meta.xml
<CustomField>
    <fullName>Abstrakt_Announcements__c</fullName>
    <label>Abstrakt Announcements</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>