force-app/main/default/objects/Client_Meeting__c/fields/Abstrakt_Call_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Abstrakt_Call_Feedback__c</fullName>
    <label>Abstrakt Call Feedback</label>
    <length>7000</length>
    <type>Html</type>
</CustomField>