force-app/main/default/objects/Client_Meeting__c/fields/Account_Details__c.field-meta.xml
<CustomField>
    <fullName>Account_Details__c</fullName>
    <label>Account Details</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>