force-app/main/default/objects/Client_Meeting__c/fields/Account_Satisfaction_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_Satisfaction_Level__c</fullName>
    <formula>TEXT(Account__r.Satisfaction_Level__c)</formula>
    <inlineHelpText>This is the current satisfaction level of the account and not necessarily the satisfaction level of client during the Monthly Results Meeting month.</inlineHelpText>
    <label>Account Satisfaction Level</label>
    <type>Text</type>
</CustomField>