force-app/main/default/objects/Client_Meeting__c/fields/Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Action_Items__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Items</label>
    <referenceTo>SFDC_Cases_and_Issues__c</referenceTo>
    <relationshipName>Monthly_Results_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>