force-app/main/default/objects/Client_Meeting__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <description>Used on Sapper Consulting MRM to track client&apos;s activity.</description>
    <label>Activity</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>