force-app/main/default/objects/Client_Meeting__c/fields/Activity_Results_Notes__c.field-meta.xml
<CustomField>
    <fullName>Activity_Results_Notes__c</fullName>
    <label>Activity/Results Notes</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>