force-app/main/default/objects/Client_Meeting__c/fields/Ad_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Ad_Strategy__c</fullName>
    <description>The date that the agency ad strategy is submitted</description>
    <inlineHelpText>The date that the agency ad strategy is submitted</inlineHelpText>
    <label>Ad Strategy Submitted Date</label>
    <type>Date</type>
</CustomField>