force-app/main/default/objects/Client_Meeting__c/fields/Additional_Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Meeting_Notes__c</fullName>
    <inlineHelpText>Is there anything else the client would like to discuss?
What pearls of wisdom (company or industry) can they pass along to help the PSM and PSR understand completely their product, its sale or their industry better?</inlineHelpText>
    <label>Additional Meeting Notes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>