force-app/main/default/objects/Client_Meeting__c/fields/Additional_Services__c.field-meta.xml
<CustomField>
    <fullName>Additional_Services__c</fullName>
    <description>Used to send out implementation email alerts.</description>
    <label>Additional Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Website &amp; Social</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>