force-app/main/default/objects/Client_Meeting__c/fields/Agency_Monthly_Results_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Agency_Monthly_Results_Meeting_Date__c</fullName>
    <inlineHelpText>Agency Only</inlineHelpText>
    <label>Agency Monthly Results Meeting Date</label>
    <type>Date</type>
</CustomField>