force-app/main/default/objects/Client_Meeting__c/fields/Agency_Reports_Built_Date__c.field-meta.xml
<CustomField>
    <fullName>Agency_Reports_Built_Date__c</fullName>
    <inlineHelpText>Agency Only</inlineHelpText>
    <label>Agency Reports Built Date</label>
    <type>Date</type>
</CustomField>