force-app/main/default/objects/Client_Meeting__c/fields/Agency_Reports_Sent_to_Client_Date__c.field-meta.xml
<CustomField>
    <fullName>Agency_Reports_Sent_to_Client_Date__c</fullName>
    <inlineHelpText>Agency Only</inlineHelpText>
    <label>Agency Reports Sent to Client Date</label>
    <type>Date</type>
</CustomField>