force-app/main/default/objects/Client_Meeting__c/fields/Agenda__c.field-meta.xml
<CustomField>
    <fullName>Agenda__c</fullName>
    <label>Agenda</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>