force-app/main/default/objects/Client_Meeting__c/fields/Agenda_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Agenda_Feedback__c</fullName>
    <description>MRM notes</description>
    <label>Agenda Feedback</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>