force-app/main/default/objects/Client_Meeting__c/fields/Alignment_With_Abstrakt_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Alignment_With_Abstrakt_Expectations__c</fullName>
    <description>CFS: How aligned is Abstrakt with your original expectations?</description>
    <inlineHelpText>CFS: How aligned is Abstrakt with your original expectations?</inlineHelpText>
    <label>Alignment With Abstrakt Expectations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Aligned</fullName>
            </value>
            <value>
                <fullName>Somewhat Aligned</fullName>
            </value>
            <value>
                <fullName>Not Aligned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>