force-app/main/default/objects/Client_Meeting__c/fields/All_Appointments_Didn_t_Happen__c.field-meta.xml
<CustomField>
    <fullName>All_Appointments_Didn_t_Happen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Appointments Didn&apos;t Happen</label>
    <type>Checkbox</type>
</CustomField>