force-app/main/default/objects/Client_Meeting__c/fields/All_Appointments_Happened__c.field-meta.xml
<CustomField>
    <fullName>All_Appointments_Happened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Appointments Happened</label>
    <type>Checkbox</type>
</CustomField>