force-app/main/default/objects/Client_Meeting__c/fields/AM_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>AM_Action_Items__c</fullName>
    <label>AM Action Items</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>