force-app/main/default/objects/Client_Meeting__c/fields/Any_Additional_Services_Needed__c.field-meta.xml
<CustomField>
    <fullName>Any_Additional_Services_Needed__c</fullName>
    <label>Any Additional Services Needed?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>SEM</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Radio/TV</fullName>
            </value>
            <value>
                <fullName>Email Marketing</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>