force-app/main/default/objects/Client_Meeting__c/fields/Appointment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Notes__c</fullName>
    <label>Appointment Notes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>