force-app/main/default/objects/Client_Meeting__c/fields/Appointment_Process__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Process__c</fullName>
    <defaultValue>&quot;A. Schedule the appointment over the Phone&quot;  +SUBSTITUTE($Label.NewLine, &quot;-&quot;, &quot;&quot;)+
&quot;B. Calendar Invite Sent to Prospect and Client&quot;
+SUBSTITUTE($Label.NewLine, &quot;-&quot;, &quot;&quot;)+
&quot;C. Quality will listen to the appointment call and score it within 48 Hours Typically&quot;
+SUBSTITUTE($Label.NewLine, &quot;-&quot;, &quot;&quot;)+
&quot;D. Quality will send [Client’s Team that needs to be on the distribution list] the Appointment Notes via Email&quot;</defaultValue>
    <inlineHelpText>A. Schedule the appointment over the Phone
B. Calendar Invite Sent to Prospect and Client
C. Quality will listen to the appointment call and score it within 48 Hours
D. Quality will send [Client’s Team that needs to be on the distribution list]</inlineHelpText>
    <label>Appointment Process</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>