force-app/main/default/objects/Client_Meeting__c/fields/Appointment_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Statuses__c</fullName>
    <label>Appointment Statuses</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>