force-app/main/default/objects/Client_Meeting__c/fields/Appointment_TOC_Review__c.field-meta.xml
<CustomField>
    <fullName>Appointment_TOC_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Review Meeting Results... What TOCs will flip?</inlineHelpText>
    <label>Appointment/TOC Review</label>
    <type>Checkbox</type>
</CustomField>