force-app/main/default/objects/Client_Meeting__c/fields/Approved_Items__c.field-meta.xml
<CustomField>
    <fullName>Approved_Items__c</fullName>
    <label>Approved Items</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>