force-app/main/default/objects/Client_Meeting__c/fields/Appts_needed_to_hit_year_2_goal__c.field-meta.xml
<CustomField>
    <fullName>Appts_needed_to_hit_year_2_goal__c</fullName>
    <label>Appts needed to hit year 2 goal?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>