force-app/main/default/objects/Client_Meeting__c/fields/Are_We_Talking_to_the_Final_KDM__c.field-meta.xml
<CustomField>
    <fullName>Are_We_Talking_to_the_Final_KDM__c</fullName>
    <description>CFS: are we talking to the final KDM/ contract signer.</description>
    <inlineHelpText>CFS: are we talking to the final KDM/ contract signer.</inlineHelpText>
    <label>Are We Talking to the Final KDM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>