force-app/main/default/objects/Client_Meeting__c/fields/Are_you_willing_to_provide_a_referral__c.field-meta.xml
<CustomField>
    <fullName>Are_you_willing_to_provide_a_referral__c</fullName>
    <label>Are you willing to provide a referral?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>