force-app/main/default/objects/Client_Meeting__c/fields/Ask_high_quality_questions__c.field-meta.xml
<CustomField>
    <fullName>Ask_high_quality_questions__c</fullName>
    <label>Ask high quality questions?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>