force-app/main/default/objects/Client_Meeting__c/fields/Asked_for_Referral__c.field-meta.xml
<CustomField>
    <fullName>Asked_for_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asked for Referral</label>
    <type>Checkbox</type>
</CustomField>