force-app/main/default/objects/Client_Meeting__c/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <description>Document who is on the meeting.</description>
    <label>Attendees</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>