force-app/main/default/objects/Client_Meeting__c/fields/Behind_the_Scenes_Notes__c.field-meta.xml
<CustomField>
    <fullName>Behind_the_Scenes_Notes__c</fullName>
    <label>Behind the Scenes Notes</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>