force-app/main/default/objects/Client_Meeting__c/fields/Best_Practices_Notes__c.field-meta.xml
<CustomField>
    <fullName>Best_Practices_Notes__c</fullName>
    <label>Best Practices Notes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>