force-app/main/default/objects/Client_Meeting__c/fields/Bionic_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Bionic_Action_Items__c</fullName>
    <label>Bionic Action Items</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>