force-app/main/default/objects/Client_Meeting__c/fields/Budget_Co_Op__c.field-meta.xml
<CustomField>
    <fullName>Budget_Co_Op__c</fullName>
    <label>Budget/Co-Op</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>