force-app/main/default/objects/Client_Meeting__c/fields/Build_and_Maintain_Relation_with_KDM__c.field-meta.xml
<CustomField>
    <fullName>Build_and_Maintain_Relation_with_KDM__c</fullName>
    <label>Build and Maintain Relation with KDM</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>