force-app/main/default/objects/Client_Meeting__c/fields/Calibrate_on_Appointment_Both_Scored__c.field-meta.xml
<CustomField>
    <fullName>Calibrate_on_Appointment_Both_Scored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calibrate on Appointment Both Scored</label>
    <type>Checkbox</type>
</CustomField>