force-app/main/default/objects/Client_Meeting__c/fields/Call_Center_Director_Override__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Director_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For when there is no call recording</description>
    <inlineHelpText>For when there is no call recording</inlineHelpText>
    <label>Call Center Director Override</label>
    <type>Checkbox</type>
</CustomField>