force-app/main/default/objects/Client_Meeting__c/fields/Call_Guide_Notes__c.field-meta.xml
<CustomField>
    <fullName>Call_Guide_Notes__c</fullName>
    <label>Call Guide Notes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>