force-app/main/default/objects/Client_Meeting__c/fields/Call_Meeting_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Call_Meeting_Duration_Minutes__c</fullName>
    <label>Call Meeting Duration (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>