force-app/main/default/objects/Client_Meeting__c/fields/Call_Quality__c.field-meta.xml
<CustomField>
    <fullName>Call_Quality__c</fullName>
    <defaultValue>&quot;“We’ll get to know your messaging over time, but before we get started is there anything we CANNOT say?”&quot;</defaultValue>
    <label>Call Quality</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>