force-app/main/default/objects/Client_Meeting__c/fields/Call_Recording_Link__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording_Link__c</fullName>
    <label>Call Recording Link (join.me)</label>
    <type>Url</type>
</CustomField>