force-app/main/default/objects/Client_Meeting__c/fields/Call_Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording_URL__c</fullName>
    <description>This field is used in the Inbound/Outbound portals for clients to see their call recordings.</description>
    <formula>IF(ISBLANK(Call_Recording_Link__c), &quot;Not Available&quot;, HYPERLINK( Call_Recording_Link__c , &quot;Click Here&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Recording URL</label>
    <type>Text</type>
</CustomField>