force-app/main/default/objects/Client_Meeting__c/fields/Cancel_Risk__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Risk__c</fullName>
    <description>Track if the client is a cancel risk. Updates account page from a flow.</description>
    <label>Cancel Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>