force-app/main/default/objects/Client_Meeting__c/fields/Cancel_Risks__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Risks__c</fullName>
    <label>Cancel Risks</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>