force-app/main/default/objects/Client_Meeting__c/fields/Case_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Case_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_MeetingsrFI3</relationshipName>
    <type>Lookup</type>
</CustomField>