force-app/main/default/objects/Client_Meeting__c/fields/Changes_to_Messaging__c.field-meta.xml
<CustomField>
    <fullName>Changes_to_Messaging__c</fullName>
    <inlineHelpText>Are there any changes that need to be made to the scripts, emails, assets?</inlineHelpText>
    <label>Changes to Messaging</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>