force-app/main/default/objects/Client_Meeting__c/fields/Cleansing_Review__c.field-meta.xml
<CustomField>
    <fullName>Cleansing_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Full review of survey data collected and any other important information such as emails, decision makers, direct lines, etc.</inlineHelpText>
    <label>Cleansing Review</label>
    <type>Checkbox</type>
</CustomField>