force-app/main/default/objects/Client_Meeting__c/fields/Client_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Client_Action_Items__c</fullName>
    <label>Client Action Items</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>