force-app/main/default/objects/Client_Meeting__c/fields/Client_Best_Practices__c.field-meta.xml
<CustomField>
    <fullName>Client_Best_Practices__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ask them if they have anything that has been working for them in the sales process. (past/present/future)</inlineHelpText>
    <label>Client Best Practices</label>
    <type>Checkbox</type>
</CustomField>