force-app/main/default/objects/Client_Meeting__c/fields/Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partner Meetings</relationshipLabel>
    <relationshipName>Partner_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>