force-app/main/default/objects/Client_Meeting__c/fields/Client_Feedback_on_Grow_Show__c.field-meta.xml
<CustomField>
    <fullName>Client_Feedback_on_Grow_Show__c</fullName>
    <description>Used on Sapper MRM to improve Grow Show content</description>
    <label>Client Feedback on Grow Show</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>