force-app/main/default/objects/Client_Meeting__c/fields/Client_Listened_to_Grow_Show__c.field-meta.xml
<CustomField>
    <fullName>Client_Listened_to_Grow_Show__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used on Sapper MRM to track how many clients are listening to the Grow Show</description>
    <label>Client Listened to Grow Show</label>
    <type>Checkbox</type>
</CustomField>