force-app/main/default/objects/Client_Meeting__c/fields/Client_No_Show__c.field-meta.xml
<CustomField>
    <fullName>Client_No_Show__c</fullName>
    <formula>IF( Meeting_Scheduled_For__c &lt; Meeting_Held_Date__c ,IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;&quot;, 25, 25),IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;&quot;, 25, 25))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client No Show</label>
    <type>Text</type>
</CustomField>