force-app/main/default/objects/Client_Meeting__c/fields/Client_Pipeline_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Pipeline_Notes__c</fullName>
    <label>Client Pipeline Notes</label>
    <length>30000</length>
    <type>Html</type>
</CustomField>