force-app/main/default/objects/Client_Meeting__c/fields/Client_Process_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Process_Notes__c</fullName>
    <label>Client Process Notes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>