force-app/main/default/objects/Client_Meeting__c/fields/Clients_in_First_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Clients_in_First_90_Days__c</fullName>
    <label>Clients in First 90 Days</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>