force-app/main/default/objects/Client_Meeting__c/fields/Closed_Business_ROI_Review__c.field-meta.xml
<CustomField>
    <fullName>Closed_Business_ROI_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Business/ROI Review</label>
    <type>Checkbox</type>
</CustomField>