force-app/main/default/objects/Client_Meeting__c/fields/Coaching_Possible_Responses__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Possible_Responses__c</fullName>
    <label>Coaching Possible Responses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Don’t need to teach me my industry</fullName>
            </value>
            <value>
                <fullName>Doesn’t understand coaching is Pipeline Mgmt.</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>