force-app/main/default/objects/Client_Meeting__c/fields/Communication__c.field-meta.xml
<CustomField>
    <fullName>Communication__c</fullName>
    <label>Communication</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>