force-app/main/default/objects/Client_Meeting__c/fields/Communication_Possible_Responses__c.field-meta.xml
<CustomField>
    <fullName>Communication_Possible_Responses__c</fullName>
    <label>Communication Possible Responses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not enough</fullName>
            </value>
            <value>
                <fullName>Too much</fullName>
            </value>
            <value>
                <fullName>Lack follow up</fullName>
            </value>
            <value>
                <fullName>Didn’t implement change</fullName>
            </value>
            <value>
                <fullName>Didn’t understand your needs</fullName>
            </value>
            <value>
                <fullName>It’s the same every month</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>