force-app/main/default/objects/Client_Meeting__c/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <label>Competitors</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>