force-app/main/default/objects/Client_Meeting__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <formula>IF( ISPICKVAL(Status__c ,&apos;Completed&apos;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed?</label>
    <type>Checkbox</type>
</CustomField>