force-app/main/default/objects/Client_Meeting__c/fields/Confidence_so_far_1_10_10_is_best__c.field-meta.xml
<CustomField>
    <fullName>Confidence_so_far_1_10_10_is_best__c</fullName>
    <inlineHelpText>5 you see yourself as a lifetime partner and raving fan of our program and 1 it’s a red alert and we have major problems that need to be fixed ASAP</inlineHelpText>
    <label>Confidence in Future Success 1-5</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
                <isActive>false</isActive>
                <label>10</label>
            </value>
            <value>
                <fullName>6</fullName>
                <isActive>false</isActive>
                <label>6</label>
            </value>
            <value>
                <fullName>7</fullName>
                <isActive>false</isActive>
                <label>7</label>
            </value>
            <value>
                <fullName>8</fullName>
                <isActive>false</isActive>
                <label>8</label>
            </value>
            <value>
                <fullName>9</fullName>
                <isActive>false</isActive>
                <label>9</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>