force-app/main/default/objects/Client_Meeting__c/fields/Confirm_Qualifiers_and_Call_Guide__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Qualifiers_and_Call_Guide__c</fullName>
    <defaultValue>&quot;Confirm Appointment Qualifiers per QAS and Call Guide (fill in the blank prior to meeting)&quot;</defaultValue>
    <label>Confirm Qualifiers and Call Guide</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>