force-app/main/default/objects/Client_Meeting__c/fields/Contained_everything_you_expected__c.field-meta.xml
<CustomField>
    <fullName>Contained_everything_you_expected__c</fullName>
    <label>Contained everything you expected?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>