force-app/main/default/objects/Client_Meeting__c/fields/Content_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Content_Feedback__c</fullName>
    <label>Content</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>