force-app/main/default/objects/Client_Meeting__c/fields/Content_Strategy_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Content_Strategy_Submitted_Date__c</fullName>
    <description>The date the content strategy was submitted</description>
    <inlineHelpText>The date the content strategy was submitted</inlineHelpText>
    <label>Content Strategy Submitted Date</label>
    <type>Date</type>
</CustomField>