force-app/main/default/objects/Client_Meeting__c/fields/Copywriter_Present__c.field-meta.xml
<CustomField>
    <fullName>Copywriter_Present__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Copywriter Present</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_MeetingsLJrQ</relationshipName>
    <type>Lookup</type>
</CustomField>