force-app/main/default/objects/Client_Meeting__c/fields/Creative__c.field-meta.xml
<CustomField>
    <fullName>Creative__c</fullName>
    <label>Creative</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>