force-app/main/default/objects/Client_Meeting__c/fields/Creative_Audit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Creative_Audit_Notes__c</fullName>
    <label>Creative Audit Notes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>