force-app/main/default/objects/Client_Meeting__c/fields/Creative_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Creative_Feedback__c</fullName>
    <label>Creative Feedback</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>